<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_gravity="center"
    android:backgroundTint="@color/backgroundColor"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Set As"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:fontFamily="@font/cardo_bold"
            android:layout_marginTop="5dp"
            />

        <LinearLayout
            android:layout_below="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="5"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >

            <LinearLayout
                android:id="@+id/lay1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_ring_item"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_ringtone"
                    android:tint="@color/white"
                    android:padding="4dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/set_ringtone"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:fontFamily="@font/cardo_bold"
                    android:layout_marginLeft="15dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_ring_item"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_alarm"
                    android:tint="@color/white"
                    android:padding="4dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/set_alarm"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:fontFamily="@font/cardo_bold"
                    android:layout_marginLeft="15dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_ring_item"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_notifications"
                    android:tint="@color/white"
                    android:padding="4dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/set_notification"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:fontFamily="@font/cardo_bold"
                    android:layout_marginLeft="15dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_ring_item"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_contact"
                    android:tint="@color/white"
                    android:padding="4dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/set_contact"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:fontFamily="@font/cardo_bold"
                    android:layout_marginLeft="15dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_ring_item"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_share"
                    android:tint="@color/white"
                    android:padding="4dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/set_share"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:fontFamily="@font/cardo_bold"
                    android:layout_marginLeft="15dp"
                    />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>